--- a/viikko2/poetry-web/pyproject.toml
+++ b/viikko2/poetry-web/pyproject.toml
@@ -8,10 +8,16 @@ authors = [
 readme = "README.md"
 requires-python = "^3.12"
 dependencies = [
-    "flask (>=3.1.2,<4.0.0)"
+    "flask (>=3.1.2,<4.0.0)",
+    "sqlalchemy (>=2.0.44,<3.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pytest (>=9.0.0,<10.0.0)"
+]
