--- a/viikko2/poetry-web/pyproject.toml
+++ b/viikko2/poetry-web/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = "^3.12"
 dependencies = [
-    "flask (>=3.1.2,<4.0.0)",
-    "sqlalchemy (==1.4.54)"
+    "sqlalchemy (==1.4.54)",
+    "fastapi (>=0.121.1,<0.122.0)"
 ]
 
 
